added frontend module, reorganized POMs, added jar-with-dependencies to build

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 # Compiled class file
 *.class
-# Maven target directory
-/backend/target/
 
 # Log file
 *.log
@@ -29,4 +27,6 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-/backend/data/
+/data/
+
+.flattened-pom.xml
