--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,7 +12,14 @@
     "node": ">=18.0.0 <19.0.0"
   },
   "dependencies": {
-    "vue": "^3.3.4"
+    "@element-plus/icons-vue": "^2.1.0",
+    "element-plus": "^2.3.14",
+    "lodash": "^4.17.21",
+    "mitt": "^3.0.1",
+    "vee-validate": "^4.11.8",
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.5",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
