--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.jpa.hibernate.ddl-auto=update
 # with the following two lines, all SQL statement executions are logged at DEBUG level
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# with the following two lines, we see the message 'un-scheduling entity deletion'
+#logging.level.org.hibernate.event.internal.DefaultPersistEventListener=TRACE
