--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
 # with the following two lines, all SQL statement executions are logged at DEBUG level
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # with the following two lines, we see the message 'un-scheduling entity deletion'
 #logging.level.org.hibernate.event.internal.DefaultPersistEventListener=TRACE
