--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,5 +6,5 @@ spring.jpa.hibernate.ddl-auto=update
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
-# with the following two lines, we see the message 'un-scheduling entity deletion'
+# with the following line, we see the message 'un-scheduling entity deletion'
 #logging.level.org.hibernate.event.internal.DefaultPersistEventListener=TRACE
