--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -27,12 +27,5 @@ coverage
 *.sln
 *.sw?
 
+*.tsbuildinfo
 /node/
-
-# eclipse project files
-/.project
-/.classpath
-/.settings/
-
-/target/
-/yarn.lock
