changes lifecycle binding for cleanup of frontend resources to clean

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -87,7 +87,7 @@
                 <executions>
                     <execution>
                         <id>auto-clean</id>
-                        <phase>initialize</phase>
+                        <phase>clean</phase>
                         <goals>
                             <goal>clean</goal>
                         </goals>
