--- a/frontend/pom.xml
+++ b/frontend/pom.xml
@@ -83,6 +83,16 @@
                             <arguments>install</arguments>
                         </configuration>
                     </execution>
+                    <!-- Lint the source files -->
+                    <execution>
+                        <id>npm run lint</id>
+                        <goals>
+                            <goal>npm</goal>
+                        </goals>
+                        <configuration>
+                            <arguments>run lint</arguments>
+                        </configuration>
+                    </execution>
                     <!-- Build and minify static files -->
                     <execution>
                         <id>npm run build</id>
