adds logging to engine classes and fixes changelist computations

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,9 +2,13 @@ spring.datasource.url=jdbc:h2:file:./data/db
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=update
+
 # with the following two lines, all SQL statement executions are logged at DEBUG level
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 # with the following line, we see the message 'un-scheduling entity deletion'
 #logging.level.org.hibernate.event.internal.DefaultPersistEventListener=TRACE
+
+# enables factorial's engine logging
+logging.level.de.yggdrasil128.factorial.engine=TRACE
