--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,7 @@
     "test:unit": "vitest",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "eslint src/ --fix",
+    "lint": "eslint src/",
     "format": "prettier --write src/"
   },
   "dependencies": {
