--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "pinia": "^2.1.7",
+    "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.4.29",
     "vue-draggable-next": "^2.2.1",
     "vue-router": "^4.3.3"
