--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,7 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint src/",
-    "format": "prettier --write src/"
+    "format-do-not-use": "prettier --write src/"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
