--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "element-plus": "^2.8.4",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
+    "pegjs": "^0.10.0",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^4.1.3",
     "vue": "^3.4.29",
@@ -32,6 +33,7 @@
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
     "@types/node": "^20.14.5",
+    "@types/pegjs": "^0.10.6",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
