provides a scraper for a Satisfactory game data

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,6 @@ spring.jpa.hibernate.ddl-auto=update
 
 # enables factorial's engine logging
 logging.level.de.yggdrasil128.factorial.engine=TRACE
+
+# show download of icons
+logging.level.de.yggdrasil128.factorial.model.icon.IconDownloader=DEBUG
