--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
     <modules>
         <module>backend</module>
         <module>frontend</module>
+        <module>scraper-satis</module>
     </modules>
 
     <dependencyManagement>
@@ -91,6 +92,11 @@
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
                 <version>2.3.232</version>
+            </dependency>
+            <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>1.10.2</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
