adds automatic backups for games and saves
(we should re-visit this for some configuration options once we design
the executable)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 #logging.level.org.hibernate.event.internal.DefaultPersistEventListener=TRACE
 
 # enables factorial's engine logging
-logging.level.de.yggdrasil128.factorial.engine=TRACE
+logging.level.de.yggdrasil128.factorial.engine=DEBUG
 
 # show download of icons
 logging.level.de.yggdrasil128.factorial.model.icon.IconDownloader=DEBUG
