--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,41 +14,41 @@
     "format-do-not-use": "prettier --write src/"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^2.3.1",
-    "@vueuse/components": "^11.1.0",
-    "axios": "^1.7.7",
-    "element-plus": "^2.8.4",
+    "@element-plus/icons-vue": "^2.3.2",
+    "@vueuse/components": "^11.3.0",
+    "axios": "^1.11.0",
+    "element-plus": "^2.10.7",
     "lodash": "^4.17.21",
     "mitt": "^3.0.1",
     "pegjs": "^0.10.0",
-    "pinia": "^2.1.7",
-    "pinia-plugin-persistedstate": "^4.1.3",
+    "pinia": "^2.3.1",
+    "pinia-plugin-persistedstate": "4.1.3",
     "vue": "^3.4.29",
     "vue-draggable-next": "^2.2.1",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
-    "@eslint/js": "^9.12.0",
-    "@rushstack/eslint-patch": "^1.8.0",
-    "@tsconfig/node20": "^20.1.4",
+    "@eslint/js": "^9.33.0",
+    "@rushstack/eslint-patch": "^1.12.0",
+    "@tsconfig/node20": "^20.1.6",
     "@types/jsdom": "^21.1.7",
-    "@types/node": "^20.14.5",
+    "@types/node": "^20.19.11",
     "@types/pegjs": "^0.10.6",
-    "@vitejs/plugin-vue": "^5.0.5",
+    "@vitejs/plugin-vue": "^5.2.4",
     "@vue/eslint-config-prettier": "^9.0.0",
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.57.1",
-    "eslint-plugin-vue": "^9.28.0",
-    "globals": "^15.11.0",
-    "jsdom": "^24.1.0",
-    "npm-run-all2": "^6.2.0",
-    "prettier": "^3.2.5",
+    "eslint-plugin-vue": "^9.33.0",
+    "globals": "^15.15.0",
+    "jsdom": "^24.1.3",
+    "npm-run-all2": "^6.2.6",
+    "prettier": "^3.6.2",
     "typescript": "~5.4.0",
-    "typescript-eslint": "^8.8.1",
-    "vite": "^5.3.1",
-    "vitest": "^1.6.0",
-    "vue-tsc": "^2.0.21"
+    "typescript-eslint": "^8.39.1",
+    "vite": "^5.4.19",
+    "vitest": "^1.6.1",
+    "vue-tsc": "^2.2.12"
   }
 }
