added custom banner

--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,6 +105,12 @@
             </plugin>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <configuration>
+                    <delimiters>
+                        <delimiter>@</delimiter>
+                    </delimiters>
+                    <useDefaultDelimiters>false</useDefaultDelimiters>
+                </configuration>
                 <executions>
                     <execution>
                         <id>Copy Vue.js frontend assets</id>
