--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+application.version=@project.version@
+
 spring.datasource.url=jdbc:h2:file:./data/db
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
