use vite proxy for api requests and websocket (dev server only)

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 application.version=@project.version@
+server.port=8080
 
 spring.datasource.url=jdbc:h2:file:./data/db
 spring.sql.init.mode=always
